# Prokopakop

./: .gitignore  Cargo.toml  README.md  build.rs
benches/: perft.rs
data/: small.txt
scripts/: .gitignore  benchmark.py  build-all-commits.sh  build-commit.sh  build-engines.sh  tournament.py
src/: lib.rs  main.rs  test.rs
src/controller/: cli.rs  controller.rs  game_controller.rs  mod.rs  optimize.rs  training.rs
src/engine/: evaluate.rs  history.rs  killer.rs  mod.rs  nnue.rs  search.rs
src/engine/search/: history.rs  limits.rs  mod.rs  params.rs  results.rs  searcher.rs
src/game/: bitboard.rs  board.rs  evaluate.rs  magic.rs  mod.rs  nnue.rs  opening_book.rs  pgn.rs  pieces.rs  search.rs  square.rs  table.rs  training.rs  zobrist.rs
src/utils/: bitboard.rs  cli.rs  magic.rs  mod.rs  square.rs  zobris.rs
tests/: uci.rs
train/: .gitignore  Cargo.toml  example-config.toml
train/src/: main.rs
