[package]
name = "prokopakop"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
strum = "0.27.2"
strum_macros = "0.27.2"
env_logger = "0.11.8"
rand = "0.9.2"
clap = "4.5.42"
rayon = "1.10.0"
fxhash = "0.2.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
debug = true

[profile.test]
inherits = "release"
debug = true

[[bench]]
name = "perft"
harness = false
