[package]
name = "prokopakop-bullet-nnue-trainer"
version = "0.1.0"
edition = "2021"

[dependencies]
bullet_lib = { git = "https://github.com/xiaoxiae/bullet.git", package = "bullet_lib" }
bulletformat = "1.8.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }

[[bin]]
name = "train"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
